# difypal

./: .env.example  .gitignore  Promptforcodegent.txt  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts  workflow.yml
docs/: architecture.md  dify-compatibility.md  local-setup.md  security.md
electron/main/: api-runtime.ts  index.ts  runtime-engine.ts  storage.ts
electron/preload/: index.ts
runtime-engine/: README.md  pyproject.toml
runtime-engine/dify_runtime_bridge/: __init__.py  __main__.py  http_llm.py  runner.py
runtime-engine/tests/: test_bridge.py
samples/dsl/: echo-workflow.yml
samples/requirements/: support-triage.md
src/core/agents/: dsl-review.ts  llm-generation.ts  pipeline.ts
src/core/ai/: presets.ts  providers.ts  types.ts
src/core/dify/: sse.ts
src/core/docs/: generator.ts
src/core/dsl/: compatibility.ts  fixer.ts  generator.ts  node-editor.ts  parser.ts  starter-templates.ts
src/core/graph/: converter.ts
src/core/runner/: simulator.ts
src/core/security/: csp.ts  redaction.ts
src/core/tests-generator/: generator.ts
src/renderer/: App.tsx  main.tsx
tests/e2e/: app.spec.ts
tests/unit/: api-runtime.test.ts  api-tester.test.tsx  artifacts.test.ts  compatibility.test.ts  converter.test.ts  csp.test.ts  dify-sse.test.ts  dsl-review.test.ts  llm-generation.test.ts  node-editor.test.ts  parser.test.ts  providers.test.ts  security.test.ts  simulator.test.ts  starter-templates.test.ts  validator.test.ts
(+25 files in other folders)
