[project]
name = "dify-dsl-runtime-bridge"
version = "0.1.0"
description = "Local JSON bridge from Dify DSL Studio to the official Graphon runtime engine."
requires-python = ">=3.12,<3.14"
dependencies = [
  "graphon==0.5.3",
  "httpx>=0.28,<1",
  "pyyaml>=6,<7",
]

[dependency-groups]
dev = [
  "pytest>=8,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
